<resources>
    <string name="ipaddr"> 192.168.1.101 </string>
    <string name="app_name">ManagePower</string>
    <string name="light"> Light </string>
    <string name="profile"> Profile </string>
    <string name="temperature"> Temperature </string>
    <string name="set_profile"> Set Profile </string>
    <string name="humidity"> Humidity </string>
    <string name="devices"> Devices </string>
    <string name="on_off"> ON/OFF </string>
    <string name="timestamp"> TimeStamp</string>
    <string name="millisecond"> MilliSeconds</string>
    <string name="set_time"> Set Time </string>
    <string name="set_date"> Set Date </string>
    <string name="timers"> Timers </string>
    <string name="new_timer"> New Timer </string>
    <string name="new_device"> New Device </string>
    <string name="on_timer"> On Timer </string>
    <string name="off_timer"> Off Timer </string>
    <string name="title_activity_timers">TimersActivity</string>
    <string name="action_settings">Settings</string>
    <string name="device_name">Device Name</string>
    <string name="add_timer">Add Timer</string>
    <string name="add_device">Add Device</string>
    <string name="refresh">Refresh</string>
    <string-array name="on_off_options">
        <item>ON</item>
        <item>OFF</item>
    </string-array>
</resources>
