<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.apps.koona.managepower.MainActivity">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Get Temperature"
        android:id="@+id/buttonGet" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/listView" />

    <Button
        android:text="@string/profiles"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/profiles" />

    <Button
        android:text="@string/devices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/devices" />

    <Button
        android:text="@string/add_device"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/newdevice" />

    <Button
        android:text="@string/timers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/timers" />

    <Button
        android:text="@string/new_timer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/newtimer" />

</LinearLayout>
